--- a/A1/index.html
+++ b/A1/index.html
@@ -8,9 +8,14 @@
     <title>Portfolio</title>
 </head>
 <body>
+    <ul>
+        <li><a href="default.asp">Home</a></li>
+        <li><a href="contact.asp">Contact</a></li>
+        <li><a href="about.asp">About</a></li>
+      </ul> 
     <h1 class="center">Mein Portfolio</h1>
 
-    <video width="100%" height="600" controls loop>
+    <video width="100%" height="800" controls loop>
     <source src="..\Images\clip1.mp4" type="video/mp4"> </source>
     </video>
 
