--- a/A10/main.html
+++ b/A10/main.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="ToDo.js" defer></script>
     <link rel="stylesheet" href="script.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <title>Document</title>
 </head>
 <body>
@@ -18,7 +19,6 @@
    
     <input type="text" name="addTask" value="" placeholder="add another Task" id="Input">
   
- 
     
     
 </body>
